[package]
name = "rclone-automount"
version = "1.0.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_plain = "1.0.2"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[package.metadata.deb]
maintainer = "Samoxiaki <samoxiaki@yahoo.com>"
depends = "rclone"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rclone-automount", "usr/bin/", "755"]
]